--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <h2 class="container__subtitle">Наша команда</h2>
           <ul class="card">
             <li class="card__item">
-              <img src="./images/our-team/img.jpg" width="270" alt="Designer" />
+              <img class="card__image" src="./images/our-team/img.jpg" width="270" alt="Designer" />
               <div class="team-card">
                 <h3 class="team-card__name">Игорь Демьяненко</h3>
                 <p class="team_card__profession">Product Designer</p>
@@ -225,7 +225,7 @@
               </div>
             </li>
             <li class="card__item">
-              <img
+              <img class="card__image"
                 src="./images/our-team/img-1.jpg"
                 width="270"
                 alt="Fe developer"
@@ -286,7 +286,7 @@
               </div>
             </li>
             <li class="card__item">
-              <img
+              <img class="card__image"
                 src="./images/our-team/img-2.jpg"
                 width="270"
                 alt="Marketing"
@@ -347,7 +347,7 @@
               </div>
             </li>
             <li class="card__item">
-              <img
+              <img class="card__image"
                 src="./images/our-team/img-3.jpg"
                 width="270"
                 alt="UI deisgner"
@@ -492,6 +492,7 @@
     </main>
     <footer class="footer">
       <div class="container footer__container">
+        <div class="footer__container--group">
         <div class="footer-wrap">
           <a href="" class="footer-wrap__link"
             ><span class="footer-wrap__logo">Web</span>Studio</a
@@ -558,6 +559,7 @@
               </a>
             </li>
           </ul>
+        </div>
         </div>
         <div class="footer-form">
         <h2 class="footer-form__title">Подпишитесь на рассылку</h2>
