--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,7 @@
     <header class="header">
       <div class="container header__container">
         <a href="" class="container__link"><span class="container-logo">Web</span>Studio</a>
+        <div class="container-nav" id="menu-container" data-menu>
         <nav class="navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
@@ -45,6 +46,23 @@
             >
           </li>
         </ul>
+        <ul class="modal-list">
+          <li class="modal-list__item"><a class="modal-list__link" href="" target="_blank" rel="noopener noreferrer"
+              aria-label="Instgram">Instgram</a></li>
+          <li class="modal-list__item"><a class="modal-list__link" href="" target="_blank" rel="noopener noreferrer"
+              aria-label="Twitter">Twitter</a></li>
+          <li class="modal-list__item"><a class="modal-list__link" href="" target="_blank" rel="noopener noreferrer"
+              aria-label="Facebook">Facebook</a></li>
+          <li class="modal-list__item"><a class="modal-list__link" href="" target="_blank" rel="noopener noreferrer"
+              aria-label="Linkedin">Linkedin</a></li>
+        </ul>
+        </div>
+        <button class="navigation__button" type="button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+          <svg class="navigation__icon" width="24" height="16" aria-label="Переключатель мобильного меню">
+            <use class="navigation__icon--close" href="./images/icons.svg#icon-close"></use>
+            <use class="navigation__icon--menu" href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
