fixed some errors

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           
           </ul>
         </nav>
+        <div>
           <a href="tel:+380961111111" class="navigation__link--modal">+38 096 111 11 11</a>
           <a href="mailto:info@devstudio.com" class="navigation__link--modal different-color">info@devstudio.com</a>
           <ul class="modal-list">
@@ -41,6 +42,7 @@
             <li class="modal-list__item"><a class="modal-list__link" href="" target="_blank" rel="noopener noreferrer" aria-label="Facebook">Facebook</a></li>
             <li class="modal-list__item"><a class="modal-list__link" href="" target="_blank" rel="noopener noreferrer" aria-label="Linkedin">Linkedin</a></li>
           </ul>
+          </div>
           </div>
           <button class="navigation__button" type="button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
             <svg class="navigation__icon" width="24" height="16" aria-label="Переключатель мобильного меню">
