--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
           <nav class="navigation">
             <ul class="navigation__list">
               <li class="navigation__item">
-                <a href="" class="navigation__link">Студия</a>
+                <a href="./index.html" class="navigation__link">Студия</a>
               </li>
               <li class="navigation__item">
                 <a href="./portfolio.html" class="navigation__link navigation__link--current">Портфолио</a>
@@ -34,6 +34,7 @@
     
             </ul>
           </nav>
+          <div>
           <a href="tel:+380961111111" class="navigation__link--modal">+38 096 111 11 11</a>
           <a href="mailto:info@devstudio.com" class="navigation__link--modal different-color">info@devstudio.com</a>
           <ul class="modal-list">
@@ -46,9 +47,9 @@
             <li class="modal-list__item"><a class="modal-list__link" href="" target="_blank" rel="noopener noreferrer"
                 aria-label="Linkedin">Linkedin</a></li>
           </ul>
+          </div>
         </div>
-        <button class="navigation__button" type="button" aria-expanded="false" aria-controls="menu-container"
-          data-menu-button>
+        <button class="navigation__button" type="button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
           <svg class="navigation__icon" width="24" height="16" aria-label="Переключатель мобильного меню">
             <use class="navigation__icon--close" href="./images/icons.svg#icon-close"></use>
             <use class="navigation__icon--menu" href="./images/icons.svg#icon-menu"></use>
@@ -363,6 +364,7 @@
     
       </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
 
   </body>
 </html>
