--- a/index.html
+++ b/index.html
@@ -170,7 +170,16 @@
           <h2 class="container__subtitle">Наша команда</h2>
           <ul class="card">
             <li class="card__item">
-              <img class="card__image" src="./images/our-team/img.jpg" width="270" alt="Designer" />
+              <picture>
+                <source media="(max-width: 767px)"
+                  srcset="./images/desktop/team/ourteam-1.jpg 1x,
+                  ./images/mobile/team/ourteam-1@2x.jpg 2x">
+                <source media="(max-width: 767px)" srcset="./images/tablet/team/ourteam-1.jpg 1x,
+                  ./images/tablet/team/ourteam-1@2x.jpg 2x">
+                <source media="(max-width: 767px)" srcset="./images/desktop/team/ourteam-1.jpg 1x,
+                  ./images/desktop/team/ourteam-1@2x.jpg 2x">
+                <img src="./images/desktop/team/ourteam-1.jpg" alt="открытый ноутбук с изображением веб сайта на экране">
+              </picture>
               <div class="team-card">
                 <h3 class="team-card__name">Игорь Демьяненко</h3>
                 <p class="team_card__profession">Product Designer</p>
@@ -228,11 +237,15 @@
               </div>
             </li>
             <li class="card__item">
-              <img class="card__image"
-                src="./images/our-team/img-1.jpg"
-                width="270"
-                alt="Fe developer"
-              />
+              <picture>
+                <source media="(max-width: 767px)" srcset="./images/desktop/team/ourteam-2.jpg 1x,
+                                  ./images/mobile/team/ourteam-2@2x.jpg 2x">
+                <source media="(max-width: 767px)" srcset="./images/tablet/team/ourteam-2.jpg 1x,
+                                  ./images/tablet/team/ourteam-2@2x.jpg 2x">
+                <source media="(max-width: 767px)" srcset="./images/desktop/team/ourteam-2.jpg 1x,
+                                  ./images/desktop/team/ourteam-2@2x.jpg 2x">
+                <img src="./images/desktop/team/ourteam-2.jpg" alt="открытый ноутбук с изображением веб сайта на экране">
+                </picture>
               <div class="team-card">
                 <h3 class="team-card__name">Ольга Репина</h3>
                 <p class="team-card__profession">Frontend Developer</p>
@@ -289,11 +302,15 @@
               </div>
             </li>
             <li class="card__item">
-              <img class="card__image"
-                src="./images/our-team/img-2.jpg"
-                width="270"
-                alt="Marketing"
-              />
+              <picture>
+                <source media="(max-width: 767px)" srcset="./images/desktop/team/ourteam-3.jpg 1x,
+                                  ./images/mobile/team/ourteam-3@2x.jpg 2x">
+                <source media="(max-width: 767px)" srcset="./images/tablet/team/ourteam-3.jpg 1x,
+                                  ./images/tablet/team/ourteam-3@2x.jpg 2x">
+                <source media="(max-width: 767px)" srcset="./images/desktop/team/ourteam-3.jpg 1x,
+                                  ./images/desktop/team/ourteam-3@2x.jpg 2x">
+                <img src="./images/desktop/team/ourteam-3.jpg" alt="открытый ноутбук с изображением веб сайта на экране">
+                </picture>
               <div class="team-card">
                 <h3 class="team-card__name">Николай Тарасов</h3>
                 <p class="team-card__profession">Marketing</p>
@@ -350,11 +367,16 @@
               </div>
             </li>
             <li class="card__item">
-              <img class="card__image"
-                src="./images/our-team/img-3.jpg"
-                width="270"
-                alt="UI deisgner"
-              />
+              <picture>
+              <source media="(max-width: 767px)" srcset="./images/desktop/team/ourteam-4.jpg 1x,
+                                ./images/mobile/team/ourteam-4@2x.jpg 2x">
+              <source media="(max-width: 767px)" srcset="./images/tablet/team/ourteam-4.jpg 1x,
+                                ./images/tablet/team/ourteam-4@2x.jpg 2x">
+              <source media="(max-width: 767px)" srcset="./images/desktop/team/ourteam-4.jpg 1x,
+                                ./images/desktop/team/ourteam-4@2x.jpg 2x">
+              <img src="./images/desktop/team/ourteam-4.jpg" alt="открытый ноутбук с изображением веб сайта на экране">
+              </picture>
+              
               <div class="team-card">
                 <h3 class="team-card__name">Михаил Ермаков</h3>
                 <p class="team-card__profession">UI Designer</p>
