--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                   ./images/tablet/team/ourteam-1@2x.jpg 2x">
                 <source media="(max-width: 767px)" srcset="./images/desktop/team/ourteam-1.jpg 1x,
                   ./images/desktop/team/ourteam-1@2x.jpg 2x">
-                <img src="./images/desktop/team/ourteam-1.jpg" alt="открытый ноутбук с изображением веб сайта на экране">
+                <img class="card__image" src="./images/desktop/team/ourteam-1.jpg" alt="открытый ноутбук с изображением веб сайта на экране">
               </picture>
               <div class="team-card">
                 <h3 class="team-card__name">Игорь Демьяненко</h3>
@@ -244,7 +244,7 @@
                                   ./images/tablet/team/ourteam-2@2x.jpg 2x">
                 <source media="(max-width: 767px)" srcset="./images/desktop/team/ourteam-2.jpg 1x,
                                   ./images/desktop/team/ourteam-2@2x.jpg 2x">
-                <img src="./images/desktop/team/ourteam-2.jpg" alt="открытый ноутбук с изображением веб сайта на экране">
+                <img class="card__image" src="./images/desktop/team/ourteam-2.jpg" alt="открытый ноутбук с изображением веб сайта на экране">
                 </picture>
               <div class="team-card">
                 <h3 class="team-card__name">Ольга Репина</h3>
@@ -309,7 +309,7 @@
                                   ./images/tablet/team/ourteam-3@2x.jpg 2x">
                 <source media="(max-width: 767px)" srcset="./images/desktop/team/ourteam-3.jpg 1x,
                                   ./images/desktop/team/ourteam-3@2x.jpg 2x">
-                <img src="./images/desktop/team/ourteam-3.jpg" alt="открытый ноутбук с изображением веб сайта на экране">
+                <img class="card__image" src="./images/desktop/team/ourteam-3.jpg" alt="открытый ноутбук с изображением веб сайта на экране">
                 </picture>
               <div class="team-card">
                 <h3 class="team-card__name">Николай Тарасов</h3>
@@ -374,7 +374,7 @@
                                 ./images/tablet/team/ourteam-4@2x.jpg 2x">
               <source media="(max-width: 767px)" srcset="./images/desktop/team/ourteam-4.jpg 1x,
                                 ./images/desktop/team/ourteam-4@2x.jpg 2x">
-              <img src="./images/desktop/team/ourteam-4.jpg" alt="открытый ноутбук с изображением веб сайта на экране">
+              <img class="card__image" src="./images/desktop/team/ourteam-4.jpg" alt="открытый ноутбук с изображением веб сайта на экране">
               </picture>
               
               <div class="team-card">
